# maige

./: Cargo.toml  README.md
src/: cli.rs  commands.rs  crypto.rs  lib.rs  main.rs  prompt.rs  resolver.rs  store.rs
tests/: integration.rs
