[package]
name = "maige"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A CLI tool for securely managing and injecting environment variables and secrets"
license = "AGPL-3.0-only"
authors = ["Ian Knowles"]
repository = "https://github.com/ikcore/maige"
homepage = "https://github.com/ikcore/maige"
readme = "README.md"
keywords = ["env", "secrets", "encryption", "cli", "environment"]
categories = ["command-line-utilities", "cryptography"]
exclude = [".claude/", "CLAUDE.md", "tests/"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
dialoguer = "0.11"
anyhow = "1"
thiserror = "1"
base64 = "0.22"
regex = "1"

[dev-dependencies]
tempfile = "3"
